--- a/copia 4/grado10/talleres.html
+++ b/copia 4/grado10/talleres.html
@@ -91,8 +91,21 @@
     <h2 style="color: #002147;">TEST VOCACIONAL 2025</h2>
   </div>
 
+<!------ Tarjeta visual para descarga del taller grado 10 ------>
+
+<p style="text-align: center; font-size: 16px; color: #333;">
+  Accede al correo institucional desde Gmail:<br>
+  <a href="https://accounts.google.com/AccountChooser?Email=prueba.arijuan@arquidiocesanos.edu.co"
+     target="_blank"
+     style="color: #014aa2; text-decoration: underline;">
+    Abrir Gmail como prueba.arijuan@arquidiocesanos.edu.co
+  </a>
+  <br>
+  Clave: <strong>vocacion2025</strong>
+</p>
 
 
+  
   <!------ Tarjeta visual para descarga del taller grado 10 ------>
 
 <div style="
