--- a/copia 4/index.html
+++ b/copia 4/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SIH COMPARTIR </title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
