--- a/copia 4/grado10/talleres.html
+++ b/copia 4/grado10/talleres.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Talleres del Profesor - Colegio Compartir</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="../assets/css/style.css">
   <style>
     body {
